coverage plugin changed